--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,5 @@
 	lol = log --graph --decorate --oneline --color
 [commit]
 	template = ~/dotfiles/.git-commit-template.txt
+[core]
+	excludefile = /root/.gitignore
