--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Za Wilgustus
-	email = za@F5.com
+	email = za@f5.com
 [alias]
 	lol = log --graph --decorate --oneline --color
 [commit]
