Use an email address I actually control!

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Za Wilgustus
-	email = za@f5.com
+	email = zancas@contains.io
 [alias]
 	lol = log --graph --decorate --oneline --color
 [commit]
