--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,11 @@
 [user]
-	name = Za Wilgustus
-	email = zancas@contains.io
+	name = zancas
+	email = zancas@zingolabs.org
 [alias]
 	lol = log --graph --decorate --oneline --color
 [commit]
 	template = ~/dotfiles/.git-commit-template.txt
 [core]
 	excludefile = /root/.gitignore
+[init]
+	defaultBranch = main
