--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,15 @@
 [user]
 	name = zancas
 	email = zancas@zingolabs.org
+    signingkey = 6DB04B434E55B7BF
 [alias]
 	lol = log --graph --decorate --oneline --color
 [commit]
+    gpgSign = true
 	template = ~/dotfiles/.git-commit-template.txt
 [core]
 	excludefile = /root/.gitignore
 [init]
 	defaultBranch = main
+[gpg]
+    program = gpg2
