--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -71,8 +71,9 @@ module-margin-right = 2
 font-0 = misc fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = wuncon siji:pixelsize=10;1
+font-3 = FreeSans:style=Regular
 modules-center = 
-modules-right = ewmh filesystem memory cpu wlan battery temperature date
+modules-right = battery ewmh filesystem memory cpu wlan  temperature date
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -235,15 +236,16 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
-adapter = AC
+battery = BAT1
+adapter = ACAD
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = #0000ff
 
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+format-discharging-underline = #ff0000
+
 
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
