--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -72,6 +72,9 @@ font-0 = misc fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = wuncon siji:pixelsize=10;1
 font-3 = FreeSans:style=Regular
+font-4 = FreeSans:style=Bold
+font-5 = FreeSans:style=Oblique
+font-6 = FreeSans:style=Bold Oblique
 modules-center = 
 modules-right = battery ewmh filesystem memory cpu wlan  temperature date
 tray-position = right
