ugrade launcher and move ewmh to the left

--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -28,7 +28,7 @@ alert = #bd2c40
 
 [bar/mainbar0]
 inherit = bar/barbase
-modules-left = workspace0
+
 [module/workspace0]
 type = custom/script
 exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
@@ -76,7 +76,8 @@ font-4 = FreeSans:style=Bold
 font-5 = FreeSans:style=Oblique
 font-6 = FreeSans:style=Bold Oblique
 modules-center = 
-modules-right = battery ewmh filesystem memory cpu wlan  temperature date
+modules-left = ewmh
+modules-right = battery filesystem memory cpu wlan  temperature date
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
