--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -68,9 +68,9 @@ padding-left = 0
 padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
-font-0 = misc fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = wuncon siji:pixelsize=10;1
+font-0 = "Font Awesome 6 Free:pixelsize=10;1"
+font-1 = "Material Design Icons:pixelsize=10;1"
+font-2 = "Wuncon Siji:pixelsize=10;1"
 font-3 = FreeSans:style=Regular
 font-4 = FreeSans:style=Bold
 font-5 = FreeSans:style=Oblique
