pass monitor, make width and offset explicit

--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -25,34 +25,9 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-
-[bar/mainbar0]
-inherit = bar/barbase
-
-[module/workspace0]
-type = custom/script
-exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
-tail = true
-
-[bar/mainbar1]
-inherit = bar/barbase
-modules-left = workspace1
-[module/workspace1]
-type = custom/script
-exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
-tail = true
-
-[bar/mainbar2]
-inherit = bar/barbase
-modules-left = workspace2
-[module/workspace2]
-type = custom/script
-exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
-tail = true
-
 [bar/barbase]
-width = ${env:width}
-offset-x = ${env:offsetx}
+width = 100%
+offset-x = 0
 monitor = ${env:monitor}
 ;offset-y = ${env:y}
 ;width = 100%
@@ -75,13 +50,40 @@ font-3 = FreeSans:style=Regular
 font-4 = FreeSans:style=Bold
 font-5 = FreeSans:style=Oblique
 font-6 = FreeSans:style=Bold Oblique
-modules-center = 
+modules-center = tray
 modules-left = ewmh
 modules-right = battery filesystem memory cpu wlan  temperature date
-tray-position = right
-tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[bar/mainbar0]
+inherit = bar/barbase
+
+[module/workspace0]
+type = custom/script
+exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
+tail = true
+
+[bar/mainbar1]
+inherit = bar/barbase
+modules-left = workspace1
+
+[module/workspace1]
+type = custom/script
+exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
+tail = true
+
+[bar/mainbar2]
+inherit = bar/barbase
+modules-left = workspace2
+
+[module/workspace2]
+type = custom/script
+exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
+tail = true
+
+[module/tray]
+type = internal/tray
 
 [module/ewmh]
 type = internal/xworkspaces
