--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -43,7 +43,8 @@ padding-left = 0
 padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
-font-0 = "Font Awesome 6 Free:pixelsize=10;1"
+;font-0 = "Font Awesome 6 Free:pixelsize=10;1"
+font-0 = "DejaVu Sans Mono:style=Regular:pixelsize=10;1"
 font-1 = "Material Design Icons:pixelsize=10;1"
 font-2 = "Wuncon Siji:pixelsize=10;1"
 font-3 = FreeSans:style=Regular
@@ -52,7 +53,7 @@ font-5 = FreeSans:style=Oblique
 font-6 = FreeSans:style=Bold Oblique
 modules-center = tray
 modules-left = ewmh
-modules-right = battery filesystem memory cpu wlan  temperature date
+modules-right = battery filesystem memory cpu wlan temperature date utc-date
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -199,10 +200,15 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
+[module/utc-date]
+type = custom/script
+exec = echo "$(/home/nattyb/dotfiles/utc_time.sh)"
+interval = 1
+
 [module/date]
 type = internal/date
-date =    %%{F#99}%m/%d/%Y%%{F-}  %%{F#fff}%I:%M %p%{F-}
-date-alt = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%I:%M:%{F#666}%%{F#fba922}%S%%{F-} %p
+date = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%H:%M:%{F#666}%%{F#fba922}%S%%{F-}
+
 ;interval = 5
 ;date =
 ;date-alt = " %Y-%m-%d"
