place scripts inside polybar/scripts

--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -202,7 +202,7 @@ format-disconnected =
 
 [module/utc-date]
 type = custom/script
-exec = echo "$(/home/nattyb/dotfiles/utc_time.sh)"
+exec = echo "$(${HOME}/dotfiles/basic_polybar/scripts/utc_time.sh)"
 interval = 1
 
 [module/date]
