add path to la_time

--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -205,6 +205,11 @@ type = custom/script
 exec = echo "$(${HOME}/dotfiles/basic_polybar/scripts/utc_time.sh)"
 interval = 1
 
+[module/la-time]
+type = custom/script
+exec = ${HOME}/dotfiles/basic_polybar/scripts/la_time.sh
+interval = 1
+
 [module/date]
 type = internal/date
 date = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%H:%M:%{F#666}%%{F#fba922}%S%%{F-}
