--- a/basic_polybar/polybar.config
+++ b/basic_polybar/polybar.config
@@ -53,7 +53,7 @@ font-5 = FreeSans:style=Oblique
 font-6 = FreeSans:style=Bold Oblique
 modules-center = tray
 modules-left = ewmh
-modules-right = battery filesystem memory cpu wlan temperature date utc-date
+modules-right = battery filesystem memory cpu wlan temperature day-date-year la-time den-time utc-date
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -205,14 +205,19 @@ type = custom/script
 exec = echo "$(${HOME}/dotfiles/basic_polybar/scripts/utc_time.sh)"
 interval = 1
 
-[module/la-time]
+[module/day-date-year]
 type = custom/script
-exec = ${HOME}/dotfiles/basic_polybar/scripts/la_time.sh
+exec = ${HOME}/dotfiles/basic_polybar/scripts/day_date_year.sh
 interval = 1
 
-[module/date]
+[module/la-time]
+type = custom/script
+exec = echo LA: $(${HOME}/dotfiles/basic_polybar/scripts/la_time.sh)
+interval = 1
+
+[module/den-time]
 type = internal/date
-date = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%H:%M:%{F#666}%%{F#fba922}%S%%{F-}
+date = DEN: %%{F#fff}%H:%M:%{F#666}%%{F#fba922}%S%%{F-}
 
 ;interval = 5
 ;date =
